<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="loginPage">Login Page</string>
    <string name="mainPage">Main Page</string>
    <string name="BackPage">Back to Previous Page</string>
    <string name="loginText">Login</string>
    <string name="passwordText">Password</string>
    <string name="radioButton">Radio Button</string>
    <string name="checkBox">Check Box</string>
    <string name="whatText">What does this do?</string>
    <string name="imageBox">Image Box</string>
    <string name="listItems">List Items Page</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="dialog_message">EXIT?</string>
    <string name="dialog_title">Do you want to exit?</string>
    <string name="switchOn">Switch is turned On</string>
    <string name="switchOff">Switch is turned Off</string>
    <string name="buttonClick">Button clicked</string>
    <string name="invalidEP">Invalid email or password</string>
    <string name="exit">Exited</string>
    <string name="dontExit">Did not Exit</string>
    <string name="startChatButton">Start Chat</string>
    <string name="typeMsg">Type message here</string>
    <string name="sendButton">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Okay">Okay</string>
    <string name="In">Incoming Message</string>
    <string name="Out">Outgoing Message</string>
    <string name="weatherBtn">Weather Forecast Button</string>
    <string name="curTemp">Current Temperature</string>
    <string name="minTemp">Minimum Temperature</string>
    <string name="maxTemp">Maximum Temperature</string>


</resources>