<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListItemsActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_surface"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:columnCount="2"
        app:rowCount="2"
        tools:ignore="MissingConstraints">



    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:column_weight="1"
        android:gravity="fill"
        android:minHeight="48dp"
        android:text="@string/radioButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="55dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:column_weight="1"
        android:gravity="fill"
        android:minHeight="48dp"
        android:text="@string/checkBox"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="55dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:column_weight="1"
        android:gravity="fill"
        android:minHeight="48dp"
        android:text="@string/whatText"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="153dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageBox"
            android:gravity="fill"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:column_weight="1"
            tools:ignore="MissingConstraints,ImageContrastCheck"
            tools:layout_editor_absoluteX="233dp"
            tools:layout_editor_absoluteY="145dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPage"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="240dp"
        tools:ignore="MissingConstraints"
        style="@style/buttonStyl"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainPage"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="240dp"
        tools:ignore="MissingConstraints"
        style="@style/buttonStyl"/>

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>